--- a/templates/projector.html
+++ b/templates/projector.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GameScreen Projector</title>
-    <link rel="stylesheet" href="/static/css/projector.css">
+    <link rel="stylesheet" href="/static/projector.css">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
 
     <div class="layer dimmer"></div>
 
-<script src="/static/jsprojector.js"></script>
+<script src="/static/projector.js"></script>
 </body>
 
 </html>
