--- a/static/control.css
+++ b/static/control.css
@@ -17,10 +17,11 @@ body {
 header, footer {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 header {
+    justify-content: space-around;
     background-color: #222222;
     color: #f2c823;
     font-weight: bold;
@@ -29,6 +30,7 @@ header {
 }
 
 footer {
+    justify-content: space-between;
     background-color: #222222;
     color: #888888;
     padding: 0.5rem 1rem;
@@ -44,15 +46,6 @@ main {
     padding: 1rem;
 }
 
-h1 {
-    margin: 0 0 1rem 0;
-    text-align: center;
-}
-
-h2 {
-    margin: 0 0 1rem 0;
-}
-
 .global, .layers {
     display: flex;
     justify-content: center;
@@ -60,7 +53,6 @@ h2 {
     flex-wrap: wrap;
     margin-bottom: 2rem;
 }
-
 
 .preset_name {
     color: #ff852c;
@@ -80,10 +72,18 @@ h2 {
     cursor: pointer;
 }
 
+.global .control {
+    background-color: #914203;
+}
+
 .control.active {
     color: #222222;
     background-color: #e7d681;
     border-color: #eae0ae;
+}
+
+.global .control.active {
+    background-color: #ff9450;
 }
 
 label, input {
